# compta-ecom

./: .dockerignore  .gitignore  DEPLOYMENT.md  LANCER.bat  README.md  build.py  installer-windows.bat  pyproject.toml
api/: Dockerfile  README.md  requirements.txt
api/app/: main.py  overrides.py  routes.py  serializers.py
config/: channels.yaml  chart_of_accounts.yaml  vat_table.yaml
docs/: gabarit-ecritures.md  guide-utilisateur.md  manuel-utilisation.md
src/compta_ecom/: main.py  models.py  pipeline.py
tests/: conftest.py
tests/api/: conftest.py  test_cors.py  test_date_filter.py  test_download_endpoint.py  test_process_endpoint.py
tests/integration/: test_date_filter.py  test_export_bytes.py  test_marketplace_pipeline.py  test_payout_detail_refund.py  test_performance.py  test_pipeline_final.py  test_refund_controls.py  test_refund_manomano.py  test_refund_mirakl.py  test_refund_real_format.py  test_refund_same_order_number.py  test_refund_shopify.py  test_run_from_buffers.py  test_separator_autodetect.py  test_shopify_orphan_refund.py  test_shopify_pipeline.py
tests/unit/: test_accounting_engine.py  test_accounts.py  test_base_parser.py  test_config_loader.py  test_direct_payment_entries.py  test_excel_exporter.py  test_lettrage_checker.py  test_main.py  test_manomano_parser.py  test_marketplace_entries.py  test_marketplace_payout_entries.py  test_matching_checker.py  test_mirakl_parser.py  test_models.py  test_payout_entries.py  (+8 more)
web/: .gitignore  .vade-report  README.md  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
(+128 files in other folders)
